--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@ position: absolute;
         <a href="https://kd.link/?code=HAK06" target="_blank" class="modal-video-link">
             <div class="modal-video-container">
                 <video id="modal-video" autoplay muted loop playsinline class="modal-video-responsive">
-                    <source src="add/MBL.mp4" type="video/mp4">
+                    <source src="https://fadmoxedziq5rcev.public.blob.vercel-storage.com/silent-night-z01gJElXIRxRuk581NHC0zuC6YDUez.mp4" type="video/mp4">
                     Tarayıcınız video etiketini desteklemiyor.
                 </video>
             </div>
@@ -787,7 +787,8 @@ position: absolute;
         <a href="https://kd.link/?code=HAK06" target="_blank">
             <div class="mobile-ad-box-mobile">
                 <video autoplay muted loop playsinline>
-                    <source src="add/MBL.mp4" type="video/mp4">
+                    <source src="https://fadmoxedziq5rcev.public.blob.vercel-storage.com/silent-night-z01gJElXIRxRuk581NHC0zuC6YDUez.mp4" type="video/mp4">
+                    Tarayıcınız video etiketini desteklemiyor.
                 </video>
             </div>
         </a>
